--- a/projects.html
+++ b/projects.html
@@ -47,8 +47,12 @@
             </section>
             
             <section class="right_box" id="domain_content">
-                <h2>welcome</h2>
-                <p>select a domain to see more details</p>
+                <!--<h2>welcome</h2>
+                <p>select a domain to see more details</p> -->
+                <div class="projects_intro_pic">
+                    <img src="images/website_projects_intro_pic.jpg">
+                    <p class="para_spacing_2"><span style="color: black;">Add a small description.</span></p>    
+                </div>
             </section>
         </div>
     </main>
