--- a/project_aircraft.html
+++ b/project_aircraft.html
@@ -8,7 +8,12 @@
   </div>
   
   <div class="accordion-content">
-    <p>project 1 description</p>
+    <p class="accordion_content_description"> <span class="accordion_content_title"> Company: </span> company <br>
+      <span class="accordion_content_title"> Location: </span> loction <br>
+      <span class="accordion_content_title"> Duration: </span> duration <br>
+      <span class="accordion_content_title"> Role: </span> role <br>
+      <span class="accordion_content_title"> My contributions: </span> <br>
+    </p>
   </div>
 </div>
 
