--- a/project_aircraft.html
+++ b/project_aircraft.html
@@ -9,10 +9,15 @@
   
   <div class="accordion-content">
     <p class="accordion_content_description"> <span class="accordion_content_title"> Company: </span> company <br>
-      <span class="accordion_content_title"> Location: </span> loction <br>
+      <span class="accordion_content_title"> Location: </span> location <br>
       <span class="accordion_content_title"> Duration: </span> duration <br>
       <span class="accordion_content_title"> Role: </span> role <br>
       <span class="accordion_content_title"> My contributions: </span> <br>
+      <ul>
+        <li> contri1 </li>
+        <li> contri2 </li>
+        <li> contri3 </li>
+      </ul>
     </p>
   </div>
 </div>
