--- a/project_aircraft.html
+++ b/project_aircraft.html
@@ -12,7 +12,7 @@
       <span class="accordion_content_title"> Location: </span> location <br>
       <span class="accordion_content_title"> Duration: </span> duration <br>
       <span class="accordion_content_title"> Role: </span> role <br>
-      <span class="accordion_content_title"> My contributions: </span> <br>
+      <span class="accordion_content_title"> My contributions: </span>
       <ul>
         <li> contri1 </li>
         <li> contri2 </li>
