--- a/project_aircraft.html
+++ b/project_aircraft.html
@@ -13,8 +13,7 @@
       <span class="accordion_content_title"> Duration: </span> duration <br>
       <span class="accordion_content_title"> Role: </span> role <br>
       <span class="accordion_content_title"> My contributions: </span>
-      <ul>
-        <li> contri1 </li>
+      <ul> <li> contri1 </li>
         <li> contri2 </li>
         <li> contri3 </li>
       </ul>
