--- a/project_aircraft.html
+++ b/project_aircraft.html
@@ -8,12 +8,14 @@
   </div>
   
   <div class="accordion-content">
-    <p class="accordion_content_description"> <span class="accordion_content_title"> Company: </span> company <br>
+    <p class="accordion_content_description"> 
+      <span class="accordion_content_title"> Company: </span> company <br>
       <span class="accordion_content_title"> Location: </span> location <br>
       <span class="accordion_content_title"> Duration: </span> duration <br>
       <span class="accordion_content_title"> Role: </span> role <br>
       <span class="accordion_content_title"> My contributions: </span>
-      <ul> <li> contri1 </li>
+      <ul class="contributions_list"> 
+        <li> contri1 </li>
         <li> contri2 </li>
         <li> contri3 </li>
       </ul>
