--- a/project_aircraft.html
+++ b/project_aircraft.html
@@ -14,12 +14,12 @@
       <span class="accordion_content_title"> Duration: </span> duration <br>
       <span class="accordion_content_title"> Role: </span> role <br>
       <span class="accordion_content_title"> My contributions: </span>
-      <ul class="contributions_list"> 
-        <li> contri1 </li>
-        <li> contri2 </li>
-        <li> contri3 </li>
-      </ul>
     </p>
+    <ul class="contributions_list>
+      <li> contri1 </li>
+      <li> contri2 </li>
+      <li> contri3 </li>
+    </ul>
   </div>
 </div>
 
