--- a/project_aircraft.html
+++ b/project_aircraft.html
@@ -15,7 +15,7 @@
       <span class="accordion_content_title"> Role: </span> role <br>
       <span class="accordion_content_title"> My contributions: </span>
     </p>
-    <ul class="contributions_list>
+    <ul class="contributions_list">
       <li> contri1 </li>
       <li> contri2 </li>
       <li> contri3 </li>
