--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
 <body class="main_page">
     <section class="display2">
+        <a href="profile.html" class="menu_learn_more" target="_blank">Profile</a>
         <a href="projects.html" class="menu_learn_more" target="_blank">Projects</a>
         <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">GitHub</a>
         <a href="https://medium.com/curiosityftw" class="menu_learn_more" target="_blank">Blog</a>
@@ -55,6 +56,12 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
         </section>       
         
         <div class="display1">
+            <section class="projects">
+                <h1>Profile</h1>
+                <ul>
+                    <li><a href="profile.html" class="learn_more" target="_blank">Learn more</a></li>
+                </ul>
+            </section>
             <section class="projects">
                 <h1>Projects</h1>
                 <ul>
