--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     
     <main>
         <section class="about_me">
-            <h1 class="gradient_text_2">About me</h1>
+            <!--<h1 class="gradient_text_2">About me</h1> -->
+            <h1>About me</h1>
             <h2>In a nutshell</h2>
             <p class="para_spacing_1">Born in the industrious town of <span class="text_highlight">Bokaro, Jharkhand</span>, and nurtured by the rich cultural fabric of <span class="text_highlight">India</span>, my journey began amidst steel furnaces that fueled my curiosity about machines. From my school days at <span class="text_highlight">DPS Bokaro</span> to the rigorous academic corridors of <span class="text_highlight">IIT Kharagpur</span>, where I earned a <span class="text_highlight">Bachelor’s in Manufacturing Science and Engineering</span> in 2020, my passion for engineering grew at every stage.
 The first stepping stone in my journey was designing <span class="text_highlight">formula-style racing cars</span> during college – an experience that honed my pragmatic research, teamwork, and leadership skills. Internships at Pennsylvania State University and Airbus introduced me to the frontiers of <span class="text_highlight">additive manufacturing</span>, where I explored how materials and mechanics interplay to engineer products in novel ways.
