--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
         </section>       
         
         <div class="display1">
-            <section class="projects">
+            <section class="profile">
                 <h1>Profile</h1>
                 <ul>
                     <li><a href="profile.html" class="learn_more" target="_blank">Learn more</a></li>
